--- a/base/test-ingress.yaml
+++ b/base/test-ingress.yaml
@@ -1,37 +1,27 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: task-manager-ingress
-  namespace: janneg
+  name: test-ingress
+  namespace: default
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
-    nginx.ingress.kubernetes.io/secure-backends: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
   tls:
   - hosts:
     - taskm.duckdns.org
-    secretName: task-manager-tls
+    secretName: taskm-tls-prod
   rules:
   - host: taskm.duckdns.org
     http:
       paths:
-      - path: /api/(.*)
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: task-manager-api
-            port:
-              number: 80
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: task-manager-ui
+            name: kubernetes
             port:
-              number: 80
+              number: 443
