--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - namespace.yaml
   - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
   - ingress.yaml
+  - application.yaml
 
 # Configure ArgoCD to be accessible through your ingress
 patches:
