--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
   - ingress.yaml
   - application.yaml
+  - dockerfile-plugin-config.yaml
 
 # Configure ArgoCD to be accessible through your ingress
 patches:
