--- a/argocd/image-updater.yaml
+++ b/argocd/image-updater.yaml
@@ -75,7 +75,8 @@ spec:
       serviceAccountName: argocd-image-updater
       containers:
         - name: argocd-image-updater
-          image: argoprojlabs/argocd-image-updater:v0.12.0
+          image: quay.io/argoprojlabs/argocd-image-updater:v0.12.2
+          imagePullPolicy: IfNotPresent
           env:
             - name: ARGOCD_GRPC_WEB
               value: "true"
