--- a/argocd/image-updater.yaml
+++ b/argocd/image-updater.yaml
@@ -84,6 +84,12 @@ spec:
               value: argocd-server.argocd.svc
             - name: ARGOCD_INSECURE
               value: "true"
+            - name: LOG_LEVEL
+              value: "debug"
+          args:
+            - run
+            - --interval=30s
+            - --once=false
           volumeMounts:
             - name: config
               mountPath: /app/config
