--- a/base/50-frontend.yaml
+++ b/base/50-frontend.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: task-manager-ui
+  name: task-management-ui
   namespace: janneg
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: task-manager-ui
+      app: task-management-ui
   template:
     metadata:
       labels:
-        app: task-manager-ui
+        app: task-management-ui
     spec:
       imagePullSecrets:
         - name: ghcr-secret
       containers:
-        - name: task-manager-ui
+        - name: task-management-ui
           image: ghcr.io/jannegpriv/task-management-ui:latest
           ports:
             - containerPort: 80
@@ -24,23 +24,27 @@ spec:
             httpGet:
               path: /
               port: 80
-            initialDelaySeconds: 5
+            initialDelaySeconds: 15
+            timeoutSeconds: 5
             periodSeconds: 10
+            failureThreshold: 3
           livenessProbe:
             httpGet:
               path: /
               port: 80
-            initialDelaySeconds: 15
+            initialDelaySeconds: 30
+            timeoutSeconds: 5
             periodSeconds: 20
+            failureThreshold: 6
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: task-manager-ui
+  name: task-management-ui
   namespace: janneg
 spec:
   selector:
-    app: task-manager-ui
+    app: task-management-ui
   ports:
     - protocol: TCP
       port: 80
