feat: add GitHub Actions service account and secrets management

--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -23,3 +23,8 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+  ignoreDifferences:
+    - group: ""
+      kind: Secret
+      jsonPointers:
+        - /data
