--- a/overlays/production/secrets.yaml
+++ b/overlays/production/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secrets
-  namespace: default
+  namespace: janneg
 type: Opaque
 stringData:
   DATABASE_URL: ${DATABASE_URL}
@@ -11,7 +11,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: api-secrets
-  namespace: default
+  namespace: janneg
 type: Opaque
 stringData:
   DATABASE_URL: ${DATABASE_URL}
