--- a/overlays/production/secrets.yaml
+++ b/overlays/production/secrets.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: janneg
 type: Opaque
 stringData:
+  # This value will be replaced by GitHub Actions
   DATABASE_URL: ${DATABASE_URL}
 ---
 apiVersion: v1
@@ -14,4 +15,5 @@ metadata:
   namespace: janneg
 type: Opaque
 stringData:
+  # This value will be replaced by GitHub Actions
   DATABASE_URL: ${DATABASE_URL}
