--- a/overlays/production/secrets.yaml
+++ b/overlays/production/secrets.yaml
@@ -4,9 +4,9 @@ metadata:
   name: postgres-secrets
   namespace: janneg
 type: Opaque
-stringData:
+data:
   # This value will be replaced by GitHub Actions
-  DATABASE_URL: ${DATABASE_URL}
+  DATABASE_URL: cG9zdGdyZXNxbDovL3Bvc3RncmVzOnBvc3RncmVzQHBvc3RncmVzOjU0MzIvdGFza21hbmFnZW1lbnQ=
 ---
 apiVersion: v1
 kind: Secret
@@ -14,6 +14,6 @@ metadata:
   name: api-secrets
   namespace: janneg
 type: Opaque
-stringData:
+data:
   # This value will be replaced by GitHub Actions
-  DATABASE_URL: ${DATABASE_URL}
+  DATABASE_URL: cG9zdGdyZXNxbDovL3Bvc3RncmVzOnBvc3RncmVzQHBvc3RncmVzOjU0MzIvdGFza21hbmFnZW1lbnQ=
