--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - 01-namespace.yaml
-  - 10-secrets.yaml
+  - sealed-secrets.yaml
   - 15-registry-secret.yaml
   - 20-storage.yaml
   - 30-postgres.yaml
