--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -6,13 +6,14 @@ namespace: janneg
 resources:
   - ../../base
 
-# Replace the base secrets with production secrets
-patchesStrategicMerge:
-  - secrets.yaml
+patches:
+  - path: ingress.yaml
+    target:
+      kind: Ingress
+      name: task-management-ingress
 
-# You might also want to set specific image tags for production
 images:
-  - name: ghcr.io/jannegpriv/task-manager-api
-    newTag: latest  # Replace with specific version for production
-  - name: ghcr.io/jannegpriv/task-manager-ui
-    newTag: latest  # Replace with specific version for production
+  - name: ghcr.io/jannegpriv/task-management
+    newTag: latest
+  - name: ghcr.io/jannegpriv/task-management-ui
+    newTag: latest
