--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -16,7 +16,7 @@ spec:
     kustomize: {}
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
