feat: use v1.0.0 tags for both services

--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
 
 images:
   - name: ghcr.io/jannegpriv/task-management
-    newTag: latest
+    newTag: v1.0.0
   - name: ghcr.io/jannegpriv/task-management-ui
-    newTag: latest
+    newTag: v1.0.0
