--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: janneg
+
 resources:
   - 01-namespace.yaml
   - 10-sealed-secrets.yaml
@@ -10,3 +12,4 @@ resources:
   - 40-backend.yaml
   - 50-frontend.yaml
   - 60-ingress.yaml
+  - 70-backup-cronjob.yaml
