--- a/base/70-backup-cronjob.yaml
+++ b/base/70-backup-cronjob.yaml
@@ -13,7 +13,7 @@ spec:
         spec:
           containers:
           - name: backup
-            image: ghcr.io/jannegpriv/task-management-backup:latest
+            image: ghcr.io/jannegpriv/task-management-k8s-backup:v1.0.0-backup
             env:
             - name: DATABASE_URL
               valueFrom:
