fix: move GitHub Actions workflow to correct location

--- a/.github/workflows/backup-ci.yml
+++ b/.github/workflows/backup-ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'base/backup/**'
-    tags: [ 'v*.*.*' ]
+    tags: [ 'v*.*.*-backup' ]
   pull_request:
     branches: [ main ]
     paths:
