--- a/base/backup/Dockerfile
+++ b/base/backup/Dockerfile
@@ -1,13 +1,14 @@
 FROM postgres:15
 
-# Install Python and pip (needed for b2-cli)
+# Install required packages
 RUN apt-get update && apt-get install -y \
-    python3 \
+    python3-full \
     python3-pip \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install b2-cli
-RUN pip3 install b2
+    python3-venv \
+    && rm -rf /var/lib/apt/lists/* \
+    && python3 -m pip install --user pipx \
+    && python3 -m pipx ensurepath \
+    && python3 -m pipx install b2
 
 # Copy backup script
 COPY backup-script.sh /backup-script.sh
