fix: use Python virtual environment for b2 installation

--- a/base/backup/Dockerfile
+++ b/base/backup/Dockerfile
@@ -3,12 +3,13 @@ FROM postgres:15
 # Install required packages
 RUN apt-get update && apt-get install -y \
     python3-full \
-    python3-pip \
     python3-venv \
-    && rm -rf /var/lib/apt/lists/* \
-    && python3 -m pip install --user pipx \
-    && python3 -m pipx ensurepath \
-    && python3 -m pipx install b2
+    && rm -rf /var/lib/apt/lists/*
+
+# Create and activate virtual environment, install b2
+RUN python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+RUN pip install b2
 
 # Copy backup script
 COPY backup-script.sh /backup-script.sh
