--- a/.github/workflows/backup-ci.yml
+++ b/.github/workflows/backup-ci.yml
@@ -5,11 +5,17 @@ on:
     branches: [ main ]
     paths:
       - 'base/backup/**'
+      - '.github/workflows/backup-ci.yml'
     tags: [ 'v*.*.*-backup' ]
   pull_request:
     branches: [ main ]
     paths:
       - 'base/backup/**'
+      - '.github/workflows/backup-ci.yml'
+
+permissions:
+  contents: read
+  packages: write
 
 env:
   REGISTRY: ghcr.io
@@ -44,10 +50,14 @@ jobs:
             type=semver,pattern={{version}}
             type=sha
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./base/backup
+          file: ./base/backup/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
