--- a/base/70-backup-cronjob.yaml
+++ b/base/70-backup-cronjob.yaml
@@ -18,7 +18,7 @@ spec:
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
-                  name: postgres-secret
+                  name: postgres-secrets
                   key: DATABASE_URL
             - name: B2_APPLICATION_KEY_ID
               valueFrom:
